--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="min-100-vh min-100-vw flex-column">
-    <div class="container-fluid">
+    <section class="container-fluid">
         <header class="text-center text-white bg-dark">
             <div class="row">
                 <div class="col-12 col-md-4 col-sm-12">
@@ -22,62 +22,44 @@
                 </div>
             </div>
         </header>
-            <div class="row">
-                <div class="col-12 col-md-4 col-sm-12 ">
-                    <div class="card search-card">
-                        <div class="card-body">
-                            <form class="form-block">
-                                <h2>Search for a City:</h2>
-                                <input class="form-control mr-sm-2" type="search" placeholder="Search"
-                                    aria-label="Search">
-                                <button id = "search-btn" class="btn my-4 my-sm-4 " type="submit">Search</button>
-                            </form>
-                        </div>
-                    </div>
+        <main>
+            <section class="row">
+                <div class="col-2">
+                    <form class="form-group">
+                        <label for="input"><h2>Search for a City:</h2></label>
+                        <input type="text" id="citySearch" class="form-control mr-sm-2" placeholder="Search"
+                            aria-label="Search">
+                        <button type="submit" id="search-btn" class="btn my-4 my-sm-4">Search</button>
+                    </form>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-8 col-sm-12">
-                    <div class="card results-card">
-                        <div class="card-body">
-                            <header class="card-header text-left">
-                                <h2 id='cityName' class="text-black">
-                                    Austin
-                                </h2>
-                            <section class="col-12 col-md-8 col-sm-12">
-                              <div class="table-responsive">
-                                <table class="table table-bordered custom-table">
-                                 <thead>
-                                    <h2 id='weather-blocks' class="text-black">
-                                    5-day Forecast:
-                                    </h2>
-                                </thead>
-                                    <tr>
-                                      <th scope="col-12 col-sm-12"></th>
-                                      <th scope="col-12 col-sm-12"></th>
-                                      <th scope="col-12 col-sm-12"></th>
-                                      <th scope="col-12 col-sm-12"></th>
-                                      <th scope="col-12 col-sm-12"></th>
-                                    </tr>
-                                </table>
-                              </div>
-                            </section>
-                        </div>
-                    </div>
+            </section>
+            <section class="col-10">
+                <section id="results-section" class="row">
+                 <div id="place-container" class="col-10">
+                 </div>
+                 <div class="row">
+                    <ul class="forecast-cards">
+                        <li> </li>
+                    </ul>
                 </div>
-            </div>
-        </div>
-        <script src="./assets/script.js"></script>
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-            crossorigin="anonymous"></script>
+                </section>
+            </section>
+        </section>
+    </main>
+    <script src="./assets/script.js"></script>
+
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
+
